fixed mobile alignment.

--- a/assets/jeffbowne.css
+++ b/assets/jeffbowne.css
@@ -879,8 +879,7 @@ body {
 }
 
 .rtime {
-	position: relative;
-	left: 15px;
+	padding-left: 15px;
 	padding-bottom: 10px;
 }
 
